[Qt][Win] Fix building Source/WebCore/plugins/win/PluginViewWin.cpp https://bugs.webkit.org/show_bug.cgi?id=88308

Reviewed by Simon Hausmann.

No new tests, just a build fix.

Use ownerWindow() from page client. It has been
introduced for x11 plugins to solve exactly the
same problem.

* plugins/win/PluginViewWin.cpp:
(windowHandleForPageClient):

git-svn-id: svn://svn.chromium.org/blink/trunk@119927 bbb929c8-8fbe-4397-9dbb-9b2b20218538