third_party/WebKit/Source/WebCore/plugins/win/PluginViewWin.cpp
@@ -89,7 +89,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #if PLATFORM(QT)
 #include "QWebPageClient.h"
+#if HAVE(QT5)
+#include <QWindow>
+#else
 #include <QWidget>
+#endif
 #endif
 
 #if PLATFORM(WX)
@@ -102,8 +106,13 @@ static inline HWND windowHandleForPageClient(PlatformPageClient client)
 #if PLATFORM(QT)
     if (!client)
         return 0;
+#if HAVE(QT5)
+    if (QWindow* window = client->ownerWindow())
+        return reinterpret_cast<HWND>(window->winId());
+#else
     if (QWidget* pluginParent = qobject_cast<QWidget*>(client->pluginParent()))
         return pluginParent->winId();
+#endif
     return 0;
 #elif PLATFORM(WX)
     if (!client)
